# trust_cli

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  devnotes.md
src/: cargo.rs  main.rs  output.rs
src/api/: mod.rs  security.rs
