[package]
name = "trust-cli"
version = "0.1.0"
edition = "2024"
authors = ["Memnoc <memnochmod@gmail.com>"]
description = "Analyze and score Rust crate dependencies for security and maintenance"
homepage = "https://github.com/Memnoc/trust-cli"
repository = "https://github.com/Memnnoc/trust-cli"
license = "MIT"
readme = "README.md"
keywords = ["cargo", "dependencies", "security", "audit", "trust"]
categories = ["development-tools::cargo-plugins", "command-line-utilities"]

[[bin]]
name = "trust-cli"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

ureq = "3"

clap = { version = "4.4", features = ["derive", "cargo"] }

directories = "6.0"
chrono = { version = "0.4", default-features = false, features = [
  "clock",
  "serde",
] }

thiserror = "2.0"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.8"
mockito = "1.2"
pretty_assertions = "1.4"

# Leaving this here to remind myself I want optimization 
# when I distribute not-in-dev
[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"   # Optimize for size
